# Restoration-Kazakh-sentence

./: .gitignore  README.md  main.py  pyproject.toml
backend/: inference.py  main.py
model/: train.py
model/data/: test.csv  train_example.csv
